--- a/backend/default.env
+++ b/backend/default.env
@@ -2,6 +2,11 @@ DB_HOST =
 DB_USER = 
 DB_PASS = 
 DB_NAME = agentarmy
-PORT = 3000
+
+HOST = localhost
+PORT = 3001
+
+MINLEN_USER = 6
+MINLEN_PASS = 8
 
 JWT_SECRET_KEY = 
