--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,16 +2,23 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://armyforce.azurewebsites.net/api/",
+  "proxy": "https://armyforce.azurewebsites.net:443/api/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "cdbreact": "^1.5.3",
+    "onsenui": "^2.12.2",
+    "prop-types": "^15.8.1",
+    "ra-data-json-server": "^4.2.4",
     "react": "^18.2.0",
+    "react-admin": "^4.2.4",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-onsenui": "^1.13.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
