--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/api/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@turf/turf": "^6.5.0",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
     "cdbreact": "^1.5.3",
@@ -14,6 +15,7 @@
     "ra-data-json-server": "^4.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.6",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-onsenui": "^1.13.0",
